@@ -1,3 +1,6 @@
+* Wed Feb 20 2019 Nick Miller <nick.miller@onyxpoint.com> - 7.8.1-0
+- Add management of $ssldir, $rundir, and /var/log/puppetserver
+
 * Fri Jan 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.8.0-0
 - Fixed issues with incron rules and the simp_generate_types calls.
   - This was mostly due to bugs in the newer version of incrond. However, this
